[package]
name = "python_interpreter_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
im = "15.1.0"
imstr = "0.2.0"
indexmap = "2.0.0"
itertools = "0.11.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
try-partialord = "0.1.3"
